Update styles, update nav side bar, and add saved game component(not yet complete)

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,15 +1,66 @@
 html {
-    background-image: radial-gradient(circle, #35065c, #300657, #2c0652, #27064d, #230648, #26033e, #270235, #26002c, #24001f, #1f0014, #150008, #000000);
+  background-image: radial-gradient(circle, #35065c, #300657, #2c0652, #27064d, #230648, #26033e, #270235, #26002c, #24001f, #1f0014, #150008, #000000);
 }
 
 .auth-button {
-    border: solid 3px #1E0542;
-    border-radius: 5px;
-    width: 100px;
-    background-color: transparent;
-    padding: 10px;
+  border: solid 3px #1E0542;
+  border-radius: 5px;
+  width: 100px;
+  background-color: transparent;
+  padding: 10px;
 }
+
+.auth-button:hover {
+  cursor: pointer;
+  transition: 0.5s;
+  text-decoration: none;
+  scale: 1.1;
+}
+
+.nav-button {
+  border: solid 3px #1E0542;
+  border-radius: 5px;
+  margin-left: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: transparent;
+  padding: 10px;
+}
+
+.nav-button:hover {
+  cursor: pointer;
+  transition: 0.5s;
+  text-decoration: none;
+  scale: 1.1;
+}
+
+.return-button {
+  border: solid 3px #1E0542;
+  border-radius: 5px;
+  margin-left: 20px;
+  margin-top: 50px;
+  background-image: radial-gradient(circle,#ffdac4,#ffdac4,#ffdac4,#ffdac4, #ffdac4, #ffd9b7, #ffd8a9, #ffd99b, #ffda8d, #f8c27a, #f0ab6a, #e7935d, #c66156, #993550, #631348, #280138);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 25px;
+  padding-left: 25px;
+}
+
+.return-button:hover {
+  cursor: pointer;
+  transition: 0.5s;
+  text-decoration: none;
+  scale: 1.1;
+}
+
 .blank-button {
-background-color: transparent;
-border: transparent;
+  background-color: transparent;
+  border: transparent;
+}
+
+.blank-button:hover {
+  cursor: pointer;
+  transition: 0.5s;
+  text-decoration: none;
+  scale: 1.1;
 }
