--- a/src/client/App.css
+++ b/src/client/App.css
@@ -56,6 +56,8 @@ html {
   border-radius: 5px;
   background-color: transparent;
   padding: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .nav2-button:hover {
@@ -72,6 +74,8 @@ html {
   padding: 3px;
   width: 100px;
   margin-bottom: 15px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .nav2-mobile-button:hover {
